--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daily Tuition</title>
+    <title>YEYE</title>
 
 
     <!--  Bootstrap css file  -->
@@ -32,7 +32,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#E3BC9A">
 
 
     <!--  ======================= Start Header Area ============================== -->
@@ -88,8 +88,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
-                        <h1 class="title-text text-uppercase">I am Akshay</h1>
-                        <h4 class="title-text text-uppercase">Senior Wordpress Developer</h4>
+                        <h1 class="title-text text-uppercase">I am YEYE</h1>
+                        <h4 class="title-text text-uppercase">Chief Design Officer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
@@ -98,9 +98,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 banner-image">
+                    <!--<div class="col-lg-6 col-md-12 banner-image">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
