--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     <!--  ======================= End Header Area ============================== -->
 
     <!--  ======================= Start Main Area ================================ -->
-    <main class="site-main">
+    <main>
 
 
         <!--  ======================= Start Banner Area =======================  -->
-        <section class="site-banner">
+        <section>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
