--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
-                        <h3 class="title-text">Hey</h3>
-                        <h1 class="title-text text-uppercase">I am YEYE</h1>
-                        <h4 class="title-text text-uppercase">Chief Design Officer</h4>
-                        <div class="site-buttons">
+                        <h1 class="title-text text-uppercase">YEYE_1</h1>
+						<h1 class="title-text text-uppercase">YEYE_2</h1>
+                        <h4 class="title-text text-uppercase">Lead Designer</h4>
+                        <!--<div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
                                     me</button>
                                 <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <!--<div class="col-lg-6 col-md-12 banner-image">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
