--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body style="background-color:#E3BC9A">
 
 
-    <!--  ======================= Start Header Area ============================== -->
+    <!--  ======================= Start Header Area ============================== ->
 
     <header class="header_area">
         <div class="main-menu">
@@ -44,7 +44,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>-->
+                </button>->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
@@ -83,21 +83,15 @@
 
 
         <!--  ======================= Start Banner Area =======================  -->
-        <section class="site-banner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12 site-title">
-                        <h1 class="title-text text-uppercase">YEYE_1</h1>
-						<h1 class="title-text text-uppercase">YEYE_2</h1>
-                        <h4 class="title-text text-uppercase">Lead Designer</h4>
-                        <!--<div class="site-buttons">
-                            <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
-                                    me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
-                            </div>
-                        </div>-->
-                    </div>
+        <section class="header-container">
+            <div class="header-wrapper">
+                <div class="header-title">
+					<div class="split-line">
+						<h1 class="title-">YEYE_1</h1>
+						<h1 class="title">YEYE_2</h1>
+						<h4 class="title-text text-uppercase">/Lead Designer</h4>
+					</div>
+				</div>
                     <!--<div class="col-lg-6 col-md-12 banner-image">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
                     </div>-->
