--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
     <!--  ======================= End Header Area ============================== -->
 
     <!--  ======================= Start Main Area ================================ -->
-    <main class="site-main">
+    <div class="site-main">
 
 
         <!--  ======================= Start Banner Area =======================  -->
-        <section class="header-container">
+        <div class="header-container">
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
-						<h1 class="title-">YEYE_1</h1>
-						<h1 class="title">YEYE_2</h1>
-						<h4 class="title-text text-uppercase">/Lead Designer</h4>
+						<h1 class="title-">Yeye_1</h1>
+						<h1 class="title">Yeye_2</h1>
+						<h4 class="title-text">/Lead Designer</h4>
 					</div>
 				</div>
                     <!--<div class="col-lg-6 col-md-12 banner-image">
