--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body style="background-color:#E3BC9A">
+<body style="background-color:#FAEFE7;color:#6D3A15">
 
 
     <!--  ======================= Start Main Area ================================ -->
@@ -43,17 +43,33 @@
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
-						<h1 class="title-">Yeye_1</h1>
+						<h1 class="title">Yeye_1</h1>
 						<h1 class="title">Yeye_2</h1>
 						<h4 class="title-text">/Lead Designer</h4>
+					</div>
+				</div>
+				<div class="header-info-wrapper">
+					<div class="navigation-wrapper">
+						<nav>
+							<li> <a href="/work">Work</a> </li>
+							<li> <a href="/about">About</a> </li>
+							<li> <a href="https://www.phoenix.gov/copers">Resume</a> </li>
+						</nav>
+						<div class="navigation-email">
+							<a href="mailto:ZeTolas@gmail.com">ZeTolas@gmail.com</a>
+						</div>
+						<div class="navigation-content">
+							<h1>Designer</h1>
+							<h1>UX/UI</h1>
+						</div>
 					</div>
 				</div>
                     <!--<div class="col-lg-6 col-md-12 banner-image">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
                     </div>-->
-                </div>
-            </div>
-        </section>
+			</div>
+		</div>
+
         <!--  ======================= End Banner Area =======================  -->
 
         <!--  ========================= About Area ==========================  -->
@@ -510,7 +526,7 @@
         <!--  ========================== End Subscribe me Area ============================  -->
 
 
-    </main>
+    </div>
     <!--  ======================= End Main Area ================================ -->
 
     <footer class="footer-area">
