--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
-						<h1 class="title">Yeye_1</h1>
-						<h1 class="title">Yeye_2</h1>
-						<h4 class="title-text">/Lead Designer</h4>
+						<h1 class="title">Be</h1>
+						<h1 class="title">Da</h1>
 					</div>
 				</div>
 				<div class="header-info-wrapper">
@@ -60,7 +59,7 @@
 						</div>
 						<div class="navigation-content">
 							<h1>Designer</h1>
-							<h1>UX/UI</h1>
+							<h1>UX UI</h1>
 						</div>
 					</div>
 				</div>
@@ -71,6 +70,7 @@
 		</div>
 
         <!--  ======================= End Banner Area =======================  -->
+<!--Designer with a demonstrated history of working in the design industry. Skilled in Branding & Identity, Product, Web and Graphic Design. Has a Design Licenciate degree from Faculdade de Arquitetura de Lisboa and a Postgraduate focused in Business Administration and Management from FGV - Fundação Getulio Vargas.-->
 
         <!--  ========================= About Area ==========================  -->
 
