--- a/index.html
+++ b/index.html
@@ -52,20 +52,30 @@
 						<nav>
 							<li> <a href="/work">Work</a> </li>
 							<li> <a href="/about">About</a> </li>
-							<li> <a href="https://www.phoenix.gov/copers">Resume</a> </li>
+							<li> <a  target="_blank" href="https://www.phoenix.gov/copers">Resume</a> </li>
 						</nav>
 						<div class="navigation-email">
-							<a href="mailto:ZeTolas@gmail.com">ZeTolas@gmail.com</a>
+							<a href="mailto:BeDa@gmail.com">BeDa@gmail.com</a>
 						</div>
 						<div class="navigation-content">
 							<h1>Designer</h1>
 							<h1>UX UI</h1>
 						</div>
 					</div>
+					<div class="content-wrapper">
+						<p> 
+							"I help TMAOTC"
+							<br>
+							"on the shoulders"
+							<br>
+							"yeye"
+						</p>
+						<nav>
+							<li> <a target="_blank" href="https://www.linkedin.com/in/chetanverma7/">LinkedIn</a>
+							<li> <a  target="_blank" href="https://www.phoenix.gov/copers">Behance</a> </li>
+						</nav>
+					</div>
 				</div>
-                    <!--<div class="col-lg-6 col-md-12 banner-image">
-                        <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
-                    </div>-->
 			</div>
 		</div>
 
