--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="site-main">
 
         <!--  ======================= Start Banner Area =======================  -->
-        <div class="header-container">
+        <div class="header-container">
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
@@ -63,24 +63,28 @@
 						</div>
 					</div>
 					<div class="content-wrapper">
-						<p> 
-							"I help TMAOTC"
+						<p>
+							"Designer with a demonstrated history of working in the design industry."
 							<br>
-							"on the shoulders"
-							<br>
-							"yeye"
+							"Skilled in Branding & Identity, Product, Web and Graphic Design."
 						</p>
 						<nav>
-							<li> <a target="_blank" href="https://www.linkedin.com/in/chetanverma7/">LinkedIn</a>
-							<li> <a  target="_blank" href="https://www.phoenix.gov/copers">Behance</a> </li>
+							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
+
+							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Behance</a> </li>
 						</nav>
 					</div>
 				</div>
 			</div>
 		</div>
+		
+		<div class="work-container">
+		
+		
+		</div>
 
         <!--  ======================= End Banner Area =======================  -->
-<!--Designer with a demonstrated history of working in the design industry. Skilled in Branding & Identity, Product, Web and Graphic Design. Has a Design Licenciate degree from Faculdade de Arquitetura de Lisboa and a Postgraduate focused in Business Administration and Management from FGV - Fundação Getulio Vargas.-->
+
 
         <!--  ========================= About Area ==========================  -->
 
