--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="site-main">
 
         <!--  ======================= Start Banner Area =======================  -->
-        <div class="header-container">
+        <div class="header-container">
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
@@ -64,9 +64,11 @@
 					</div>
 					<div class="content-wrapper">
 						<p>
-							"Designer with a demonstrated history of working in the design industry."
+							"Skilled in Branding & Identity,"
 							<br>
-							"Skilled in Branding & Identity, Product, Web and Graphic Design."
+							"Product, Web and Graphic"
+							<br>
+							"Design."
 						</p>
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
