--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 					</div>
 					<div class="content-wrapper">
 						<p>
-							"Skilled in Branding & Identity,"
+							Skilled in Branding & Identity,
 							<br>
-							"Product, Web and Graphic"
+							Product, Web and Graphic
 							<br>
-							"Design."
+							Design.
 						</p>
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
