--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 				<div class="header-info-wrapper">
 					<div class="navigation-wrapper">
 						<nav>
-							<li> <a href="/work">Work</a> </li>
-							<li> <a href="/about">About</a> </li>
-							<li> <a  target="_blank" href="https://www.phoenix.gov/copers">Resume</a> </li>
+							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
+							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Behance</a> </li>
+							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Resume</a> </li>
 						</nav>
 						<div class="navigation-email">
 							<a href="mailto:BeDa@gmail.com">BeDa@gmail.com</a>
@@ -70,11 +70,6 @@
 							<br>
 							Design.
 						</p>
-						<nav>
-							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
-
-							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Behance</a> </li>
-						</nav>
 					</div>
 				</div>
 			</div>
