--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 					</div>
 				</div>
 				<div class="header-info-wrapper">
+					<div class="navigation-content">
+						<h1>/Designer</h1>
+						<!--<h1>UX UI</h1>-->
+					</div>
 					<div class="navigation-wrapper">
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
@@ -57,10 +61,7 @@
 						<div class="navigation-email">
 							<a href="mailto:BeDa@gmail.com">BeDa@gmail.com</a>
 						</div>
-						<div class="navigation-content">
-							<h1>Designer</h1>
-							<!--<h1>UX UI</h1>-->
-						</div>
+
 					</div>
 					<div class="content-wrapper">
 						<p>
