--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="header-wrapper">
                 <div class="header-title">
 					<div class="split-line">
-						<h1 class="title">Be</h1>
-						<h1 class="title">Da</h1>
+						<h1 class="title">Beatriz</h1>
+						<h1 class="title">David</h1>
 					</div>
 				</div>
 				<div class="header-info-wrapper">
@@ -56,7 +56,7 @@
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
 							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Behance</a> </li>
-							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Resume</a> </li>
+							<li> <a target="_blank" href="/pdf/CV_BeatrizDavid_2021.pdf">Resume</a> </li>
 						</nav>
 						<div class="navigation-email">
 							<a href="mailto:BeDa@gmail.com">BeDa@gmail.com</a>
