--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
 							<li> <a target="_blank" href="https://www.behance.net/beatrizcdavid">Behance</a> </li>
-							<li> <a src="https://github.com/TomeBorges/PortFolio_Website-master/blob/main/pdf/CV_BeatrizDavid_2021.pdf" width="100%" height="850px"/>Resume</a> </li>
+							<li> <a target="_blank" href="https://github.com/TomeBorges/PortFolio_Website-master/blob/main/pdf/CV_BeatrizDavid_2021.pdf">Resume</a> </li>
 						</nav>
 						<div class="navigation-email">
 							<a href="mailto:BeDa@gmail.com">BeDa@gmail.com</a>
