--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				<div class="header-info-wrapper">
 					<div class="navigation-wrapper">
 						<div class="navigation-content">
-							<h1>Designer</h1>
-							<!--<h1>UX UI</h1>-->
+							<h1>/Designer</h1>
+							<!--<h1>/UX UI</h1>-->
 						</div>
 						<nav>
 							<li> <a target="_blank" href="https://pt.linkedin.com/in/beatrizcdavid">LinkedIn</a>
